--- a/.github/workflows/publishtest.yml
+++ b/.github/workflows/publishtest.yml
@@ -26,5 +26,5 @@ jobs:
       uses: pypa/gh-action-pypi-publish@v1.1.0
       with:
         user: __token__
-        password: ${{ secrets.TEST_PYPI_PASSWORD }}
+        password: ${{ secrets.TEST_PYPI_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
