--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ python-dotenv
 supers
 matplotlib
 coloredlogs
-click
-gputil
-py-cpuinfo
-ptflops
-joblib
+gputil~=1.4
+py-cpuinfo~=7.0
+ptflops~=0.6
+joblib~=1.0
