--- a/.github/workflows/publishtest.yml
+++ b/.github/workflows/publishtest.yml
@@ -21,7 +21,7 @@ jobs:
         pip install .[build]
     - name: Build
       run: |
-        python setup_testpypi.py sdist bdist_wheel 
+        python setup.py sdist bdist_wheel --test
     - name: Publish to Test PyPI
       uses: pypa/gh-action-pypi-publish@v1.1.0
       with:
