--- a/.github/workflows/publishtest.yml
+++ b/.github/workflows/publishtest.yml
@@ -1,9 +1,8 @@
 name: Publish to TestPyPI
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [created]
 
 jobs:
   build-n-publish:
