--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-corider
+protobuf<=3.20
 torchmetrics>=0.4,<0.7
 pytorch-lightning>=1.3,<1.5
 python-dotenv
+corider
 supers>=0.2  
 matplotlib
 seaborn
